music-assistant/manifests/music-assistant-deployment-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: music-assistant

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-assistant
  namespace: music-assistant
  labels:
    app: music-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: music-assistant
  template:
    metadata:
      labels:
        app: music-assistant
    spec:
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: music-assistant
        image: ghcr.io/music-assistant/server:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - SYS_ADMIN
            - DAC_READ_SEARCH
        volumeMounts:
        - name: music-assistant-data
          mountPath: /data
        ports:
        - name: http
          containerPort: 8095
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 8095
        livenessProbe:
          httpGet:
            path: /
            port: 8095
      volumes:
      - name: music-assistant-data
        hostPath:
          path: "/mnt/k3s-prod-data/music-assistant"

---
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
  namespace: music-assistant
spec:
  selector:
    app: music-assistant
  type: ClusterIP
  ports:
  - name: http
    port: 8095
    targetPort: 8095
    protocol: TCP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: music-assistant-ingress
  namespace: music-assistant
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`music-assistant-prod.goepp.net`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: music-assistant
      port: 8095
